--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -42,29 +42,80 @@
     const filterArr = inventors.filter(
       inventor => inventor.year > 1499 && inventor.year < 1600
     )
-    console.log(filterArr)
+    console.log("filter()")
+    console.table(filterArr)
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const mapArr = inventors.map(({first, last}) => `${first} ${last}`)
+    console.log("map()")
+    console.table(mapArr)
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const sortArr = inventors.sort((firstInventor, secondInventor) => {
+      return firstInventor.year > secondInventor.year ?  1 :  -1;
+    })
+    console.log("sort()")
+    console.table(sortArr)
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const reduceNum = inventors.reduce((years, inventor) => {
+      return years + (inventor.passed - inventor.year)
+    }, 0)
+    console.log("reduce()")
+    console.table(reduceNum)
+
 
     // 5. Sort the inventors by years lived
+    const sortArr2 = inventors
+      .map(inventor => {
+        inventor.age = inventor.passed - inventor.year
+        return inventor
+      })
+      .sort((a, b) => {
+        return (a.age) > (b.age) ? -1 : 1;
+    })
+      console.log("sort() 2");
+      console.table(sortArr2);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
+    // const category = document.querySelector('.mw-category')
+    // const boulevards = Array.from(category.querySelectorAll('a')).map(link => link.textContent)
+    // const de = boulevards.filter(boul => boul.includes("de"))
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
+    const sortedPeople = people.sort((current,previous) => {
+      const [aLast, aFirst] = current.split(', ')
+      const [bLast, bFirst] = previous.split(', ')
+
+      console.log(`
+        current: ${aFirst} ${aLast}
+        previous: ${bFirst} ${bLast}
+        `)
+    })
+    console.log("Sort people by last name")
+    console.table(sortedPeople)
+
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const transport = data.reduce((obj, item) => {
+      if(!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {})
+
+    console.log("Sum up instances")
+    console.table(transport)
 
   </script>
 </body>
